client/mysqltest.c
@@ -719,6 +719,20 @@ void close_connections()
 }
 
 
+void close_statements()
+{
+  struct st_connection *con;
+  DBUG_ENTER("close_statements");
+  for (con= connections; con < next_con; con++)
+  {
+    if (con->stmt)
+      mysql_stmt_close(con->stmt);
+    con->stmt= 0;
+  }
+  DBUG_VOID_RETURN;
+}
+
+
 void close_files()
 {
   DBUG_ENTER("close_files");
@@ -2855,6 +2869,10 @@ void do_close_connection(struct st_command *command)
 	}
       }
 #endif
+      if (next_con->stmt)
+        mysql_stmt_close(next_con->stmt);
+      next_con->stmt= 0;
+
       mysql_close(&con->mysql);
       if (con->util_mysql)
 	mysql_close(con->util_mysql);
@@ -5050,10 +5068,7 @@ end:
   */
 
   var_set_errno(mysql_stmt_errno(stmt));
-#ifndef BUG15518_FIXED
-  mysql_stmt_close(stmt);
-  cur_con->stmt= NULL;
-#endif
+
   DBUG_VOID_RETURN;
 }
 
@@ -5838,6 +5853,8 @@ int main(int argc, char **argv)
 	break;
       case Q_DISABLE_PS_PROTOCOL:
         ps_protocol_enabled= 0;
+        /* Close any open statements */
+        close_statements();
         break;
       case Q_ENABLE_PS_PROTOCOL:
         ps_protocol_enabled= ps_protocol;
